--- a/07_react/01_react_functional_components/ebe9ffdc572c834eec393b18bf2c2a7c8e631340/02_product_card/src/styles/app.css
+++ b/07_react/01_react_functional_components/ebe9ffdc572c834eec393b18bf2c2a7c8e631340/02_product_card/src/styles/app.css
@@ -3,13 +3,14 @@
   height: 100vh;
 }
 
-.container {
-  margin: auto 0;
-  width: 60%;
-}
-
 .default-flex {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.card-header{
+  width: 400px;
+  text-align: center;
+  border-top-left-radius: 4px ;
+  border-top-right-radius: 4px ;
 }
